--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Jobapp</title>
+    <title>Simple Job Application System</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -10,6 +10,9 @@
   </head>
 
   <body>
+  <div class="container">
+    <h3 class="center">Job Application System</h3>
     <%= yield %>
+  </div>
   </body>
 </html>
